--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ exclude: ['CNAME', 'README.md', 'LICENSE', '_site', 'dist', 'Gemfile', 'Gemfile.
 
 # 域名配置
 # baseurl配置,如果网站部署在根目录下的其他目录中，请设置为 /目录名
-domainUrl:'http://www.zahui.top'
-baseurl:'www.zahui.top'
+domainUrl: 'http://www.zahui.top'
+baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
 tucaoUrl: https://support.qq.com/products/365559/
@@ -56,5 +56,7 @@ links:
     url: https://www.wuyeso.com
   - title: 物业导航
     url: http://so.wuyeso.com
+  - title: TMaize博客
+    url: https://blog.tmaize.net/
  
 
