--- a/_config.yml
+++ b/_config.yml
@@ -52,11 +52,13 @@ extMath: false
 links:
   - title: 愿星光伴你左右
     url: http://shanks.link/
+  - title: TMaize博客
+    url: https://blog.tmaize.net/
+  - title: 糊涂说
+    url: https://hutusi.com/
   - title: 物业经营
     url: https://www.wuyeso.com
   - title: 物业导航
     url: http://so.wuyeso.com
-  - title: TMaize博客
-    url: https://blog.tmaize.net/
  
 
