--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ exclude: ['CNAME', 'README.md', 'LICENSE', '_site', 'dist', 'Gemfile', 'Gemfile.
 
 # 域名配置
 # baseurl配置,如果网站部署在根目录下的其他目录中，请设置为 /目录名
-domainUrl: 'http://www.zahui.top'
+domainUrl: 'https://www.zahui.top'
 baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
@@ -56,6 +56,8 @@ links:
     url: https://blog.tmaize.net/
   - title: 糊涂说
     url: https://hutusi.com/
+  - title: nikola的博客
+    url: https://hi-nikola.cn/
   - title: 物业经营
     url: https://www.wuyeso.com
   - title: 物业导航
