--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 encoding: utf-8
 
 # SEO相关信息
-title: iyuanze Blog
+title: 涓滴意念汇成河
 description: iyuanze的个人博客
-keywords: iyuanze,Blog,Java,Html,JavaScript
+keywords: iyuanze,Blog,Java,Html,zahui
 author: iyuanze
 footerText: 'Copyright © 2022 未ICP备00000号'
 
