--- a/_config.yml
+++ b/_config.yml
@@ -50,13 +50,13 @@ extMath: false
 
 # 友情链接
 links:
-  - title: 愿星光伴你左右
+  - title: 愿星光伴你左右-一个自律的有想法的程序员
     url: http://shanks.link/
-  - title: TMaize博客
+  - title: TMaize博客-本博客的theme作者
     url: https://blog.tmaize.net/
-  - title: 糊涂说
+  - title: 糊涂说-任抛星汉归园圃，留取乾坤盛酒囊
     url: https://hutusi.com/
-  - title: nikola的博客
+  - title: nikola的博客-用舍由时，行藏在我
     url: https://hi-nikola.cn/
   - title: 物业经营
     url: https://www.wuyeso.com
