--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,10 @@ links:
     url: https://hi-nikola.cn/
   - title: 不如吃茶去--子舒的博客
     url: https://zburu.com/
+  - title: 表严肃--不要水，讲干货的表老师
+    url: https://biaoyansu.com/
+    
+  
   - title: 物业经营
     url: https://www.wuyeso.com
   - title: 物业导航
