--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,8 @@ links:
     url: https://zburu.com/
   - title: 表严肃--不要水，讲干货的表老师
     url: https://biaoyansu.com/
+  - title: 悠悠一草-一草的点滴记忆
+    url: https://www.agrass.cn/
     
   
   - title: 物业经营
