--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,8 @@ links:
     url: https://hi-nikola.cn/
   - title: 不如吃茶去--子舒的博客
     url: https://zburu.com/
-  - title: 表严肃--不要水，讲干货的表老师
-    url: https://biaoyansu.com/
+  - title: 游子微博--门影塘畔后花园，记录生活点滴。
+    url: https://www.lindongfang.top
   - title: 悠悠一草-一草的点滴记忆
     url: https://www.agrass.cn/
     
