--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ encoding: utf-8
 
 # SEO相关信息
 title: 涓滴意念汇成河
-description: iyuanze的个人博客
+description: 走一程有一程的风景，进一步有一步的欢喜
 keywords: iyuanze,Blog,Java,Html,zahui
 author: zahui
 footerText: 'Copyright © 2022 未ICP备00000号'
