--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ encoding: utf-8
 # SEO相关信息
 title: 涓滴意念汇成河
 description: 走一程有一程的风景，进一步有一步的欢喜
-keywords: iyuanze,Blog,Java,Html,zahui
+keywords: jekyll,Blog,读书笔记,中文博客,zahui
 author: zahui
 footerText: 'Copyright © 2022 未ICP备00000号'
 
