--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,8 @@ links:
     url: https://www.lindongfang.top
   - title: 悠悠一草-一草的点滴记忆
     url: https://www.agrass.cn/
+  - title: 林林杂语
+    url: https://www.xiaozonglin.cn/
     
   
   - title: 物业经营-一个物业人多种经营的思考
