--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,8 @@ links:
     url: https://www.xiaozonglin.cn/
   - title: 博客录（boke.lu）· 博客收录展示平台
     url: https://boke.lu
+  - title: 停云馆 · 君子有三畏：畏天命、畏大人、畏聖人之言
+    url: https://blog.yizhou.info/
     
   
   - title: 物业经营-一个物业人多种经营的思考
