--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,8 @@ links:
     url: https://boke.lu
   - title: 停云馆 · 君子有三畏：畏天命、畏大人、畏聖人之言
     url: https://blog.yizhou.info/
+  - title: 5had0w · 一个游走在互联网边缘的影子，希望在这个世界留下一点痕迹
+    url: https://www.5had0w.com/
     
   
   - title: 物业经营-一个物业人多种经营的思考
