--- a/_config.yml
+++ b/_config.yml
@@ -60,10 +60,10 @@ links:
     url: https://boke.lu
   - title: 5had0w · 一个游走在互联网边缘的影子，希望在这个世界留下一点痕迹
     url: https://www.5had0w.com/
-    
   
-  - title: 物业经营-一个物业人多种经营的思考
-    url: https://www.wuyeso.com
+  - title: Weichky’s Blog-物不可穷也，故受之以未济。
+    url: https://blog.weichky.com
 
  
+
 
